--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ GITHUB_NAME=game-core
 GITHUB_REPOSITORY_NAME=gocrafter-master-data
 GITHUB_REPOSITORY_PATH=csv
 
-# Common DB
+# Common MySQL
 COMMON_MYSQL_DATABASE=gocrafter_common
 COMMON_MYSQL_WRITE_USER=mysql_user
 COMMON_MYSQL_WRITE_PASSWORD=mysql_password
@@ -17,7 +17,7 @@ COMMON_MYSQL_READ_USER=mysql_user
 COMMON_MYSQL_READ_PASSWORD=mysql_password
 COMMON_MYSQL_READ_HOST=host.docker.internal:3306
 
-# Master DB
+# Master MySQL
 MASTER_MYSQL_DATABASE=gocrafter_master
 MASTER_MYSQL_WRITE_USER=mysql_user
 MASTER_MYSQL_WRITE_PASSWORD=mysql_password
@@ -26,7 +26,7 @@ MASTER_MYSQL_READ_USER=mysql_user
 MASTER_MYSQL_READ_PASSWORD=mysql_password
 MASTER_MYSQL_READ_HOST=host.docker.internal:3306
 
-# User DB
+# User MySQL
 USER_MYSQL_SHARD_KEY_0=0
 USER_MYSQL_DATABASE_0=gocrafter_user_0
 USER_MYSQL_WRITE_USER_0=mysql_user
@@ -45,5 +45,5 @@ USER_MYSQL_READ_USER_1=mysql_user
 USER_MYSQL_READ_PASSWORD_1=mysql_password
 USER_MYSQL_READ_HOST_1=host.docker.internal:3306
 
-# Shard 0-63
-SHARD_COUNT=1
+# MySQL Shard 0-63
+MySQL_MYSQL_SHARD_COUNT=1
