--- a/.env.test
+++ b/.env.test
@@ -8,7 +8,7 @@ GITHUB_NAME=
 GITHUB_REPOSITORY_NAME=
 GITHUB_REPOSITORY_PATH=
 
-# Common DB
+# Common MySQL
 COMMON_MYSQL_DATABASE=gocrafter_common
 COMMON_MYSQL_WRITE_USER=mysql_user
 COMMON_MYSQL_WRITE_PASSWORD=mysql_password
@@ -17,7 +17,7 @@ COMMON_MYSQL_READ_USER=mysql_user
 COMMON_MYSQL_READ_PASSWORD=mysql_password
 COMMON_MYSQL_READ_HOST=host.docker.internal:3307
 
-# Master DB
+# Master MySQL
 MASTER_MYSQL_DATABASE=gocrafter_master
 MASTER_MYSQL_WRITE_USER=mysql_user
 MASTER_MYSQL_WRITE_PASSWORD=mysql_password
@@ -26,7 +26,7 @@ MASTER_MYSQL_READ_USER=mysql_user
 MASTER_MYSQL_READ_PASSWORD=mysql_password
 MASTER_MYSQL_READ_HOST=host.docker.internal:3307
 
-# User DB
+# User MySQL
 USER_MYSQL_SHARD_KEY_0=0
 USER_MYSQL_DATABASE_0=gocrafter_user_0
 USER_MYSQL_WRITE_USER_0=mysql_user
@@ -46,4 +46,4 @@ USER_MYSQL_READ_PASSWORD_1=mysql_password
 USER_MYSQL_READ_HOST_1=host.docker.internal:3307
 
 # Shard 0-63
-MYSQL_SHARD_COUNT=1
+MySQL_MYSQL_SHARD_COUNT=1
