--- a/.env.example
+++ b/.env.example
@@ -46,4 +46,4 @@ USER_MYSQL_READ_PASSWORD_1=mysql_password
 USER_MYSQL_READ_HOST_1=host.docker.internal:3306
 
 # MySQL Shard 0-63
-MySQL_MYSQL_SHARD_COUNT=1
+MYSQL_SHARD_COUNT=1
