Add: redis setting

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,12 @@ USER_MYSQL_READ_HOST_1=host.docker.internal:3306
 
 # MySQL Shard 0-63
 MYSQL_SHARD_COUNT=1
+
+# User Redis
+USER_REDIS_DATABASE=0
+USER_MYSQL_WRITE_USER=redis_user
+USER_REDIS_WRITE_PASSWORD=redis_password
+USER_REDIS_WRITE_HOST=host.docker.internal:6379
+USER_MYSQL_READ_USER=redis_user
+USER_REDIS_READ_PASSWORD=redis_password
+USER_REDIS_READ_HOST=host.docker.internal:6379
