--- a/docs/yaml/pkg/domain/model/room/commonRoomUser/common_room_user.yaml
+++ b/docs/yaml/pkg/domain/model/room/commonRoomUser/common_room_user.yaml
@@ -10,7 +10,7 @@ structure:
     number: 1
     comment: "ルームID"
   UserId:
-    name: host_user_id
+    name: user_id
     type: string
     nullable: false
     number: 2
@@ -21,21 +21,3 @@ structure:
     nullable: false
     number: 3
     comment: "ルームユーザー立場タイプ"
-  CreatedAt:
-    name: created_at
-    type: time
-    nullable: false
-    number: 4
-    comment: "作成日時"
-  UpdatedAt:
-    name: updated_at
-    type: time
-    nullable: false
-    number: 5
-    comment: "更新日時"
-primary:
-  - RoomId,UserId
-unique:
-  - RoomId,UserId
-index:
-  - RoomId
