--- a/docs/yaml/pkg/infrastructure/mysql/common/commonRoom/common_room.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/common/commonRoom/common_room.yaml
@@ -15,12 +15,12 @@ structure:
     nullable: false
     number: 2
     comment: "作成したユーザーID"
-  RoomNumber:
-    name: room_number
-    type: int32
+  RoomReleaseType:
+    name: room_release_type
+    type: enum
     nullable: false
     number: 3
-    comment: "ルーム番号"
+    comment: "ルーム公開タイプ"
   Name:
     name: name
     type: string
@@ -51,3 +51,4 @@ unique:
   - RoomId
 index:
   - HostUserId
+  - Name
