--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -5,6 +5,8 @@ name: gocrafter-server-test
 volumes:
   mysql-local-test:
     driver: local
+  redis-local-test:
+    driver: local
 
 services:
   mysql-test:
@@ -27,6 +29,16 @@ services:
       timeout: 20s
       retries: 10
 
+  redis-test:
+    container_name: gocrafter-redis-test
+    image: redis:7.2.4
+    ports:
+      - "6380:6379"
+    volumes:
+      - ./docker/redis/redis.conf:/etc/redis.conf
+      - redis-local-test:/data
+    tty: true
+
   api-game-test:
     container_name: gocrafter-api-game-test
     env_file:
@@ -36,7 +48,7 @@ services:
       context: .
       dockerfile: ./docker/api/game/Dockerfile
     ports:
-      - "50052:50051"
+      - "50053:50051"
     volumes:
       - ./:/go/src/app
     tty: true
