Add: Ranking Get Domain

--- a/docs/yaml/pkg/domain/model/ranking/masterRanking/master_ranking.yaml
+++ b/docs/yaml/pkg/domain/model/ranking/masterRanking/master_ranking.yaml
@@ -27,3 +27,9 @@ structure:
     nullable: false
     number: 4
     comment: "ランキング範囲タイプ"
+  Limit:
+    name: limit
+    type: int32
+    nullable: false
+    number: 5
+    comment: "ランキング上限"
