--- a/docs/yaml/pkg/domain/model/ranking/commonRankingWorld/common_ranking_world.yaml
+++ b/docs/yaml/pkg/domain/model/ranking/commonRankingWorld/common_ranking_world.yaml
@@ -21,3 +21,9 @@ structure:
     nullable: false
     number: 3
     comment: "スコア"
+  RankedAt:
+    name: ranked_at
+    type: time
+    nullable: false
+    number: 5
+    comment: "ランク付け日時"
