--- a/docs/yaml/pkg/infrastructure/mysql/common/commonRankingRoom/common_ranking_room.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/common/commonRankingRoom/common_ranking_room.yaml
@@ -27,17 +27,23 @@ structure:
     nullable: false
     number: 4
     comment: "スコア"
+  RankedAt:
+    name: ranked_at
+    type: time
+    nullable: false
+    number: 5
+    comment: "ランク付け日時"
   CreatedAt:
     name: created_at
     type: time
     nullable: false
-    number: 5
+    number: 6
     comment: "作成日時"
   UpdatedAt:
     name: updated_at
     type: time
     nullable: false
-    number: 6
+    number: 7
     comment: "更新日時"
 primary:
   - MasterRankingId,RoomId,UserId
