--- a/docs/yaml/pkg/infrastructure/redis/common/commonRankingWorld/common_ranking_world.yaml
+++ b/docs/yaml/pkg/infrastructure/redis/common/commonRankingWorld/common_ranking_world.yaml
@@ -21,17 +21,23 @@ structure:
     nullable: false
     number: 3
     comment: "スコア"
+  RankedAt:
+    name: ranked_at
+    type: time
+    nullable: false
+    number: 5
+    comment: "ランク付け日時"
   CreatedAt:
     name: created_at
     type: time
     nullable: false
-    number: 4
+    number: 6
     comment: "作成日時"
   UpdatedAt:
     name: updated_at
     type: time
     nullable: false
-    number: 5
+    number: 7
     comment: "更新日時"
 primary:
   - MasterRankingId,UserId
