Add: Ranking Domain

--- a/docs/yaml/pkg/infrastructure/mysql/master/masterRankingScope/master_ranking_scope.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/master/masterRankingScope/master_ranking_scope.yaml
@@ -14,16 +14,16 @@ structure:
     type: string
     nullable: false
     number: 2
-    comment: "ランキング名"
-  RankingType:
-    name: ranking_type
+    comment: "ランキング範囲名"
+  RankingScopeType:
+    name: ranking_scope_type
     type: enum
     nullable: false
     number: 3
-    comment: "ランキングタイプ"
+    comment: "ランキング範囲タイプ"
 primary:
   - Id
 unique:
   - Id
 index:
-  - RankingType
+  - RankingScopeType
