Run: docker_gen_domain

--- a/docs/yaml/api/game/ranking/master_ranking_structure.yaml
+++ b/docs/yaml/api/game/ranking/master_ranking_structure.yaml
@@ -27,8 +27,8 @@ structure:
     nullable: false
     number: 4
     comment: "ランキング範囲タイプ"
-  Limit:
-    name: limit
+  Ranking_Limit:
+    name: ranking_limit
     type: int32
     nullable: false
     number: 5
