--- a/docs/yaml/pkg/domain/model/ranking/ranking_get_master_request.yaml
+++ b/docs/yaml/pkg/domain/model/ranking/ranking_get_master_request.yaml
@@ -3,8 +3,8 @@ package: ranking
 comment: "ランキングマスター取得リクエスト"
 
 structure:
-  MasterRankingEventId:
-    name: master_ranking_event_id
+  MasterRankingId:
+    name: master_ranking_id
     type: int64
     nullable: false
     number: 1
