--- a/docs/yaml/pkg/domain/model/ranking/masterRanking/master_ranking.yaml
+++ b/docs/yaml/pkg/domain/model/ranking/masterRanking/master_ranking.yaml
@@ -27,8 +27,8 @@ structure:
     nullable: false
     number: 4
     comment: "ランキング範囲タイプ"
-  Limit:
-    name: limit
+  Ranking_Limit:
+    name: ranking_limit
     type: int32
     nullable: false
     number: 5
