--- a/docs/yaml/pkg/infrastructure/mysql/user/userAccountToken/user_account_token.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/user/userAccountToken/user_account_token.yaml
@@ -15,3 +15,19 @@ structure:
     nullable: false
     number: 2
     comment: "トークン"
+  CreatedAt:
+    name: created_at
+    type: time
+    nullable: false
+    number: 3
+    comment: "作成日時"
+  UpdatedAt:
+    name: updated_at
+    type: time
+    nullable: false
+    number: 4
+    comment: "更新日時"
+primary:
+  - UserId
+unique:
+  - UserId
