Fix: namespaceを環境ごとに分ける修正

--- a/platform/kubernetes/api/game/deployment.yaml
+++ b/platform/kubernetes/api/game/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gocrafter-api-game-deploy
-  namespace: gocrafter-api-game
+  namespace: gocrafter-local
 spec:
   replicas: 4
   selector:
