--- a/platform/kubernetes/api/game/service.yaml
+++ b/platform/kubernetes/api/game/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gocrafter-api-game-service
-  namespace: gocrafter-api-game
+  namespace: gocrafter-local
 spec:
   type: NodePort
   selector:
