--- a/platform/kubernetes/gen/pod.yaml
+++ b/platform/kubernetes/gen/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: gocrafter-gen-pod
+  namespace: gocrafter-local
 spec:
   restartPolicy: Never
   containers:
