--- a/docs/yaml/api/game/account/account_create_request.yaml
+++ b/docs/yaml/api/game/account/account_create_request.yaml
@@ -9,3 +9,9 @@ structure:
     nullable: false
     number: 1
     comment: "ユーザー名"
+  Password:
+    name: password
+    type: string
+    nullable: false
+    number: 2
+    comment: "パスワード"
