--- a/docs/yaml/pkg/domain/model/account/account_create_request.yaml
+++ b/docs/yaml/pkg/domain/model/account/account_create_request.yaml
@@ -15,3 +15,9 @@ structure:
     nullable: false
     number: 2
     comment: "ユーザー名"
+  Password:
+    name: password
+    type: string
+    nullable: false
+    number: 2
+    comment: "パスワード"
